Is edited key added to api and websocket reponse. - june 4
