# schema.ts
@@ -496,6 +496,11 @@ export interface components {
             created_at: string;
             /** Is Read */
             is_read: boolean;
+            /**
+             * Is Edited
+             * @default false
+             */
+            is_edited: boolean;
             /** Is Deleted For Everyone */
             is_deleted_for_everyone: boolean;
             /** Is Delete For Me */
